After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774347 - Fails to build: unknown type name GdkColor
Fails to build: unknown type name GdkColor
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Win32
unspecified
Other Windows
: Normal blocker
: ---
Assigned To: gtk-win32 maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-11-13 06:22 UTC by Andrew Chadwick
Modified: 2016-11-14 19:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-win32-remove-an-unused-func-operating-on-GdkColor.patch (1.38 KB, patch)
2016-11-13 06:26 UTC, Andrew Chadwick
committed Details | Review

Description Andrew Chadwick 2016-11-13 06:22:30 UTC
Building git master as of c944bf73305ae900f7e944e54f390f624ba9d05f fails under MSYS2 on with mingw64:


make[3]: Leaving directory '/usr/src/gtk/gdk/mir'
make  all-recursive
make[3]: Entering directory '/usr/src/gtk/gdk'
Making all in win32
make[4]: Entering directory '/usr/src/gtk/gdk/win32'
Making all in rc
make[5]: Entering directory '/usr/src/gtk/gdk/win32/rc'
git.mk: Generating .gitignore
make[5]: Leaving directory '/usr/src/gtk/gdk/win32/rc'
make[5]: Entering directory '/usr/src/gtk/gdk/win32'
  CC       gdkcursor-win32.lo
In file included from ../../gdk/win32/gdkwin32misc.h:45:0,
                 from gdkwin32.h:37,
                 from gdkcursor-win32.c:24:
../../gdk/win32/gdkprivate-win32.h:207:47: error: unknown type name 'GdkColor'
 gchar *_gdk_win32_color_to_string      (const GdkColor *color);
                                               ^~~~~~~~
make[5]: *** [Makefile:797: gdkcursor-win32.lo] Error 1
make[5]: Leaving directory '/usr/src/gtk/gdk/win32'
make[4]: *** [Makefile:859: all-recursive] Error 1
make[4]: Leaving directory '/usr/src/gtk/gdk/win32'
make[3]: *** [Makefile:1533: all-recursive] Error 1
make[3]: Leaving directory '/usr/src/gtk/gdk'
make[2]: *** [Makefile:1063: all] Error 2
make[2]: Leaving directory '/usr/src/gtk/gdk'
make[1]: *** [Makefile:717: all-recursive] Error 1
make[1]: Leaving directory '/usr/src/gtk'
make: *** [Makefile:613: all] Error 2
Comment 1 Andrew Chadwick 2016-11-13 06:26:29 UTC
Created attachment 339738 [details] [review]
0001-win32-remove-an-unused-func-operating-on-GdkColor.patch

I assume GdkColor has finally been removed along the way to GTK4. The function is unused within gdk and private, so let's remove it.
Comment 2 Ignacio Casal Quinteiro (nacho) 2016-11-13 09:14:28 UTC
Review of attachment 339738 [details] [review]:

Looks good