win32: remove an unused func operating on GdkColor

https://bugzilla.gnome.org/show_bug.cgi?id=774347